idea/testData/multiplatform/diamondActualOnOnePath/left/left.kt
package sample

actual class <!LINE_MARKER("descr='Has declaration in common module'")!>ActualizedInLeft<!>